force-app/main/default/objects/ucinn_ascendv2__Home_Department_History__c/ucinn_ascendv2__Home_Department_History__c.object-meta.xml
<CustomObject>
    <description>The history of the departments where the constituent works at.</description>
    <label>Home Department History</label>
    <nameField>
        <label>Home Department History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Department Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>