force-app/main/default/objects/ucinn_ascendv2__Home_Department_History__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Home Department Histories</relationshipLabel>
    <relationshipName>Home_Department_Histories_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>