force-app/main/default/objects/ucinn_ascendv2__Home_Department_History__c/fields/ucinn_ascendv2__Home_Department__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Home Department</label>
    <referenceTo>ucinn_ascendv2__Home_Department__c</referenceTo>
    <relationshipLabel>Home Department Histories</relationshipLabel>
    <relationshipName>Home_Department_Histories_Home_Dept</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>