force-app/main/default/objects/ucinn_ascendv2__Home_Department_History__c/fields/ucinn_ascendv2__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>